--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <main>
         <h2>Class Members</h2>
         <section class="container">
-            <div class="jane-style">
+            <div class="alinah-williams">
                 <h3>Hello World!</h3>
             </div>
             <!-- New HTML content goes here! -->
             <div class="my-bio">
-                <h3>Stephanie</h3>
+                <h3>Alinah Williams</h3>
                 <h4>
-                    <em>Stephanie loves Star Wars. In fact, her favorite character is Ahsoka Tano!</em>
+                    <em>Alinah loves going to the movie theater. In fact, she goes every week!</em>
                 </h4>
             </div>
             <div class="code-ninja-style">
